...

    <TextView
        android:id="@+id/text_gchat_timestamp_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="10:00"
        android:textColor="#757575"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_gchat_message_me"
        app:layout_constraintEnd_toStartOf="@+id/card_gchat_message_me" />


...
