...
                android:layout_marginTop="-97dp"
                android:layout_marginEnd="30dp"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/meal_name"
                android:textColor="#000"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/orderStatus"
...
