...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/allergensMeal"
                app:layout_constraintTop_toBottomOf="@+id/go_vendor_profile_id"
                app:layout_constraintVertical_bias="0.438" />

            <TextView
                android:id="@+id/mealDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/textview"
                android:textColor="#000000"
                android:textSize="16sp"
...
